@@ -7,7 +7,7 @@
 require_once 'Hamcrest/TypeSafeMatcher.php';
 require_once 'Hamcrest/Description.php';
 
-abstract class Hamcrest_Core_SubstringMatcher extends Hamcrest_TypeSafeMatcher
+abstract class Hamcrest_Text_SubstringMatcher extends Hamcrest_TypeSafeMatcher
 {
   
   protected $_substring;
